--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "homepage": "https://github.com/MykalMachon/mykal.coffee#readme",
   "devDependencies": {
-    "@astrojs/preact": "^0.5.2",
-    "@astrojs/rss": "^0.2.2",
-    "@astrojs/sitemap": "^0.2.6",
+    "@astrojs/preact": "^1.0.2",
+    "@astrojs/rss": "^1.0.0",
+    "@astrojs/sitemap": "^1.0.0",
     "@netlify/functions": "^1.0.0",
-    "astro": "^1.0.0-beta.73",
+    "astro": "^1.1.2",
     "reading-time": "^1.5.0",
     "sass": "^1.54.0",
     "typescript": "^4.7.4"
